--- a/FlickrBrowserApp/FlickrBrowserApp/app/src/main/res/layout/item_row.xml
+++ b/FlickrBrowserApp/FlickrBrowserApp/app/src/main/res/layout/item_row.xml
@@ -15,12 +15,12 @@
 
     <TextView
         android:id="@+id/tvNameImage"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="10dp"
-        android:textColor="@color/black"
-        android:textSize="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"
+        android:text="TextView"
+        android:textColor="@color/black"
+        android:textSize="15dp" />
 
 </LinearLayout>
